assets/css/admin.css
/* ... */
.betterlinks-body .dropdown .dropdown-menu .btl-confirm-message .action-set .action.yes {
  background: #33db8d;
}

.betterlinks-body .dropdown .dropdown-menu .btl-confirm-message .action-set .action.no {
  background: #F97272;
}

.betterlinks-body .topbar {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 20px;
  margin-bottom: 30px;
  border-width: 1px;
  border-style: solid;
  border-color: #ebebeb;
  background-color: #fff;
  border-radius: 5px;
}

.betterlinks-body .topbar .tool-title {
  font-size: 28px;
  margin: 0;
  line-height: 1.3;
  margin-right: 10px;
}

.betterlinks-body .topbar .theme-mood-button {
  margin-left: auto;
  height: 40px;
  border: 1px solid #ebebeb;
  border-radius: 50px;
}

.betterlinks-body .topbar .theme-mood-button input#theme-mood {
  display: none;
}

.betterlinks-body .topbar .theme-mood-button .theme-mood {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 100%;
  margin: 0 5px;
  position: relative;
  border-radius: 50px;
}

.betterlinks-body .topbar .theme-mood-button .theme-mood .icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 30px;
  width: 40px;
  border-radius: 50px;
}

.betterlinks-body .topbar .theme-mood-button input#theme-mood:not(:checked) + .theme-mood .icon:first-child {
  color: #fff;
  background-image: -webkit-gradient(linear, right top, left top, from(#1bcba0), to(#33db8d));
  background-image: linear-gradient(to left, #1bcba0, #33db8d);
}

.betterlinks-body .topbar .theme-mood-button input#theme-mood:not(:checked) + .theme-mood .icon:last-child {
  color: #707070;
}

.betterlinks-body .topbar .theme-mood-button input#theme-mood:checked + .theme-mood .icon:first-child {
  color: #707070;
}

.betterlinks-body .topbar .theme-mood-button input#theme-mood:checked + .theme-mood .icon:last-child {
  color: #fff;
  background-image: -webkit-gradient(linear, right top, left top, from(#1bcba0), to(#33db8d));
  background-image: linear-gradient(to left, #1bcba0, #33db8d);
}

.betterlinks-body .dnd-category-wrapper {
  -webkit-column-count: 4;
          column-count: 4;
  -webkit-column-gap: 20px;
          column-gap: 20px;
  orphans: 1;
  widows: 1;
}

.betterlinks-body .dnd-category-wrapper.d-flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width: 1599px) {
  .betterlinks-body .dnd-category-wrapper {
    -webkit-column-count: 3;
            column-count: 3;
  }
}

@media screen and (max-width: 1199px) {
  .betterlinks-body .dnd-category-wrapper {
    -webkit-column-count: 2;
            column-count: 2;
  }
}

@media screen and (max-width: 599px) {
  .betterlinks-body .dnd-category-wrapper {
    -webkit-column-count: 1;
            column-count: 1;
  }
}

.betterlinks-body .dnd-category-wrapper .dnd-category,
.betterlinks-body .dnd-category-wrapper .dnd-create-category {
  width: 100%;
  min-width: 100%;
  margin-bottom: 20px;
  -webkit-column-break-inside: avoid;
          break-inside: avoid-column;
  display: -ms-inline-grid;
  display: inline-grid;
  page-break-inside: avoid;
  border-radius: 5px;
}

.betterlinks-body .dnd-category-wrapper .dnd-category {
  border: 1px solid transparent;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-head {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  height: 55px;
  background: #fff;
  border-radius: 5px 5px 0 0;
  padding: 0 10px;
  text-align: center;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-head .title {
  font-size: 17px;
  font-weight: 500;
  color: #252525;
  margin: 0;
  line-height: 1;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-head .dropdown {
  margin-left: 5px;
  position: relative;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-head .dropdown .icon {
  cursor: pointer;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: #b0b2ba;
  font-size: 14px;
  border: none;
  outline: none;
  -webkit-box-shadow: none;
          box-shadow: none;
  background: transparent;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-body {
  text-rendering: optimizeSpeed;
  scroll-behavior: smooth;
  -webkit-font-smoothing: antialiased;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-body::-webkit-scrollbar {
  width: 6px;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-body::-webkit-scrollbar-track {
  border-radius: 5px;
  background: rgba(176, 178, 186, 0.4);
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-body::-webkit-scrollbar-thumb {
  border-radius: 5px;
  background: #b0b2ba;
}

.betterlinks-body .dnd-category-wrapper .dnd-category .category-footer {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 25px;
}
/* ... */

